RESOLVED FIXED17485
Margins/padding expand on hover for some headlines on The Huffington Post
https://bugs.webkit.org/show_bug.cgi?id=17485
Summary Margins/padding expand on hover for some headlines on The Huffington Post
Alice Liu
Reported 2008-02-21 19:11:48 PST
* SUMMARY Margins and/or padding expand when the cursor is over, presumably during on hover, some headlines on the front page of The Huffington Post. * STEPS TO REPRODUCE 1. Go to http://www.huffingtonpost.com/ (or, better yet, open the attached web archive) 2. Hover your cursor over the headline "The Man To Beat." * RESULTS Vertical margins and/or padding is expanded around the headline. When you move your cursor away, it collapses back to "normal."
Attachments
Patch that fixes several bugs with this stuff (and improves our margin support on inline flows) (6.91 KB, patch)
2008-02-22 00:01 PST, Dave Hyatt
no flags
Patch that fixes the bug. (10.62 KB, patch)
2008-02-26 14:41 PST, Dave Hyatt
mitz: review+
Alice Liu
Comment 1 2008-02-21 19:12:05 PST
Dave Hyatt
Comment 2 2008-02-22 00:01:41 PST
Created attachment 19275 [details] Patch that fixes several bugs with this stuff (and improves our margin support on inline flows) Work in progress.
Mark Rowe (bdash)
Comment 3 2008-02-26 13:20:59 PST
*** Bug 17550 has been marked as a duplicate of this bug. ***
Dave Hyatt
Comment 4 2008-02-26 14:41:53 PST
Created attachment 19385 [details] Patch that fixes the bug.
Dave Hyatt
Comment 5 2008-02-26 14:44:10 PST
Ignore the Element.cpp change. That's unrelated.
mitz
Comment 6 2008-02-26 15:13:19 PST
Comment on attachment 19385 [details] Patch that fixes the bug. r=me
Dave Hyatt
Comment 7 2008-02-26 15:18:06 PST
Fixed in r30603.
Note You need to log in before you can comment on or make changes to this bug.