        Reviewed by Dan

http://bugs.webkit.org/show_bug.cgi?id=17485

        Refine our behavior for empty inlines so that they work more correctly with margins/borders/padding.
        Fixes a regression on huffingtonpost.com.

        New tests added to fast/inline

        * rendering/InlineFlowBox.cpp:
        (WebCore::InlineFlowBox::computeLogicalBoxHeights):
        (WebCore::InlineFlowBox::placeBoxesVertically):
        (WebCore::InlineFlowBox::shrinkBoxesWithNoTextChildren):
        * rendering/RenderFlow.cpp:
        (WebCore::RenderFlow::calcMargins):
        * rendering/RenderFlow.h:
        * rendering/RenderObject.h:
        (WebCore::RenderObject::hasHorizontalBordersPaddingOrMargin):
        (WebCore::RenderObject::hasHorizontalBordersOrPadding):
        * rendering/bidi.cpp:
        (WebCore::getBorderPaddingMargin):
        (WebCore::RenderBlock::layoutInlineChildren):
        (WebCore::inlineFlowRequiresLineBox):



Canonical link: https://commits.webkit.org/24309@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30603 268f45cc-cd09-0410-ab3c-d52691b4dbfc