WebCore/rendering/RenderFlow.h
@@ -102,6 +102,8 @@ public:
 
     virtual bool hasColumns() const { return m_hasColumns; }
 
+    void calcMargins(int containerWidth);
+
     void checkConsistency() const;
 
 private:
